--- a/index.css
+++ b/index.css
@@ -19,8 +19,8 @@ body:before {
   opacity: 0.1;
   z-index: 1000000;
   pointer-events: none;
-  background-image: url(./22072325_6566231.jpg);
-  filter: sepia(100%);
+  background-image: url(./grit.jpg);
+  filter: sepia(0%);
 }
 
 #canvas {
