--- a/index.css
+++ b/index.css
@@ -8,19 +8,13 @@ body {
   font-family: Helvetica, sans-serif;
   overflow: hidden;
 }
-
-body:before {
-  position: fixed;
-  top: 0;
-  left: 0;
+img {
+  position: absolute;
+  z-index: -4;
   width: 100vw;
-  height: 100vh;
-  content: "";
-  opacity: 0.1;
-  z-index: 1000000;
-  pointer-events: none;
-  background-image: url(./grit.jpg);
-  filter: sepia(0%);
+  height: 120vh;
+  margin-top: 2em;
+  opacity: 0.05;
 }
 
 #canvas {
